# vision-alert-service

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.en.md  SECURITY.md  check_momory_and_restart.py  docker-compose.yml  main.py  pyproject.toml  requirements-ci.txt  requirements-test.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
ai_service/: .dockerignore  MIGRATION_EXTERNAL_DEPS.md  README.md  constraints.txt  main.py  requirements.in
ai_service/app/: __init__.py  application.py  main.py
ai_service/docs/: API.md  CALL_CHAIN.md  DEPLOYMENT.md
ai_service/scripts/: init_runtime_dirs.sh
app/: application.py  main.py
docker/: Dockerfile  Dockerfile.dockerignore  Dockerfile.protected  docker-compose.gpu.yaml  docker-compose.yaml  docker-compose.yml  requirements.runtime.txt
docs/: API.en.md  API.md  CALL_CHAIN.en.md  CALL_CHAIN.md  CONTAINER_TEST.en.md  CONTAINER_TEST.md  DEPLOYMENT.en.md  DEPLOYMENT.md  OPERATIONS.en.md  OPERATIONS.md  PROTECTION.md
runtime/: config.docker.json  config.example.json
scripts/: build_protected_image.sh  ci_unittest_gate.py  install_light_models.py  license_tool.py  smoke_api.py
tests/: conftest.py  test_alert_integration.py  test_alert_pipeline.py  test_alert_service.py  test_alert_store.py  test_http_routes.py  test_license.py  test_metrics.py  test_settings.py  test_task_parser.py  test_worker.py
(+87 files in other folders)
