[project]
name = "ai-alerting-server"
version = "1.0.0"
description = "视觉告警服务：YOLO 目标检测 + MMSeg 语义分割 + 类别后处理"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Test"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # 行长度由 line-length 控制
    "N815",   # 驼峰命名兼容现有 API 字段
    "N802",   # 函数名兼容现有约定
    "SIM108", # 三元表达式非必须
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = false
